--- a/po/nb.po
+++ b/po/nb.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
-"POT-Creation-Date: 2017-05-17 09:45+1000\n"
-"PO-Revision-Date: 2017-05-17 10:12+1000\n"
+"POT-Creation-Date: 2017-05-20 09:41+1000\n"
+"PO-Revision-Date: 2017-05-20 09:51+1000\n"
 "Last-Translator: Johnny A. Solbu <johnny@solbu.net>\n"
 "Language-Team: Norwegian Bokmaal <i18n-nb@lister.ping.uio.no>\n"
 "Language: nb\n"
@@ -43,22 +43,22 @@ msgstr "trader"
 
 #: src/trader.c:235
 #, c-format
-msgid "%s: invalid value for --max-turn: `%s'\n"
+msgid "%s: invalid value for --max-turn: '%s'\n"
 msgstr "%s: ugyldig verdi for --max-turn: «%s»\n"
 
 #: src/trader.c:251
 #, c-format
-msgid "%s: invalid operand `%s'\n"
+msgid "%s: invalid operand '%s'\n"
 msgstr "%s: ugyldig operand «%s»\n"
 
 #: src/trader.c:260
 #, c-format
-msgid "%s: invalid game number `%s'\n"
+msgid "%s: invalid game number '%s'\n"
 msgstr "%s: ugyldig spillnummer «%s»\n"
 
 #: src/trader.c:269
 #, c-format
-msgid "%s: extra operand `%s'\n"
+msgid "%s: extra operand '%s'\n"
 msgstr "%s: ekstra operand «%s»\n"
 
 #. TRANSLATORS: "John Zaitseff" [IPA d͡ʒɒn ˈzaɪ̯t͡səf] is the proper
@@ -94,7 +94,7 @@ msgstr ""
 
 #: src/trader.c:308
 #, c-format
-msgid "%s: Try `%s --help' for more information.\n"
+msgid "%s: Try '%s --help' for more information.\n"
 msgstr "%s: Prøv «%s --help» for mer informasjon.\n"
 
 #: src/trader.c:311
@@ -1146,12 +1146,12 @@ msgstr "%s: ulovlig felt på linje %d"
 
 #: src/fileio.c:51
 #, c-format
-msgid "%s: illegal field on line %d: `%s'"
+msgid "%s: illegal field on line %d: '%s'"
 msgstr "%s: ugyldig felt på linje %d: «%s»"
 
 #: src/fileio.c:55
 #, c-format
-msgid "%s: illegal value on line %d: `%s'"
+msgid "%s: illegal value on line %d: '%s'"
 msgstr "%s: ugyldig verdi på linje %d: «%s»"
 
 #: src/fileio.c:91 src/fileio.c:134 src/fileio.c:402
@@ -1583,12 +1583,12 @@ msgstr "[ Trykk <MELLOMROM> for å fortsette eller <BACKSPACE> for forrige side 
 
 #: src/intf.c:110
 #, c-format
-msgid "%s: string has incorrect format: `%s'"
+msgid "%s: string has incorrect format: '%s'"
 msgstr "%s: streng har feil format: «%s»"
 
 #: src/intf.c:126
 #, c-format
-msgid "%s: character has illegal width: `%lc'"
+msgid "%s: character has illegal width: '%lc'"
 msgstr "%s: tegn har ugyldig bredde: «%lc»"
 
 #: src/intf.c:434
@@ -1603,7 +1603,7 @@ msgstr "mkchstr_conv: NUL"
 
 #: src/intf.c:1568
 #, c-format
-msgid "mkchstr: `%s'"
+msgid "mkchstr: '%s'"
 msgstr "mkchstr: «%s»"
 
 #. TRANSLATORS: This string specifies the keycodes used to insert the
@@ -1618,7 +1618,7 @@ msgstr "=;"
 
 #: src/intf.c:2034 src/intf.c:2079
 #, c-format
-msgid "gettxline: illegal character in string: `%ls'"
+msgid "gettxline: illegal character in string: '%ls'"
 msgstr "gettxline: ugyldig tegn i streng: «%ls»"
 
 #. TRANSLATORS: The strings with msgctxt "input|Yes" and
@@ -1664,7 +1664,7 @@ msgstr "ikke mer minne"
 
 #: src/utils.c:1041
 #, c-format
-msgid "xmbstowcs: `%s'"
+msgid "xmbstowcs: '%s'"
 msgstr "xmbstowcs: «%s»"
 
 #: src/utils.c:1081
@@ -1674,7 +1674,7 @@ msgstr "xwcrtomb: NUL"
 
 #: src/utils.c:1086
 #, c-format
-msgid "xwcrtomb: `%lc'"
+msgid "xwcrtomb: '%lc'"
 msgstr "xwcrtomb: «%lc»"
 
 #: lib/getopt.c:278
