--- a/po/fi.po
+++ b/po/fi.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2017-05-20 09:41+1000\n"
-"PO-Revision-Date: 2017-05-20 09:50+1000\n"
+"PO-Revision-Date: 2017-05-20 09:57+1000\n"
 "Last-Translator: Jorma Karvonen <karvonen.jorma@gmail.com>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
 "Language: fi\n"
@@ -1354,7 +1354,7 @@ msgstr ""
 "Pelaajat  voivat myös  lainata  Tähtienvälisestä Kauppapankista  lisäostojen\n"
 "rahoittamiseksi osakepörssissä.\n"
 "\n"
-"Rasteri ^B~x^N x ^B~y^N edustaa galaksikarttaa.  Sen tyypillinen lohko voi olla:\n"
+"Rasteri ^B~x^N × ^B~y^N edustaa galaksikarttaa.  Sen tyypillinen lohko voi olla:\n"
 "\n"
 "        ^e ~. ~. ^s~*^e ~. ~. ~. ^s~*^e ^s~*^e ~. ^N\n"
 "        ^e ~. ~. ~. ~. ~. ~. ~. ~. ~. ^N        ^e ~. ^N edustaa ^Btyhjää avaruutta^N,\n"
