Replace "--" with U+2014 EM DASH as appropriate

--- a/po/de.po
+++ b/po/de.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2017-05-20 09:41+1000\n"
-"PO-Revision-Date: 2017-05-20 09:48+1000\n"
+"PO-Revision-Date: 2017-05-20 10:03+1000\n"
 "Last-Translator: Philipp Thomas <pth@suse.de>\n"
 "Language-Team: German <translation-team-de@lists.sourceforge.net>\n"
 "Language: de\n"
@@ -1527,7 +1527,7 @@ msgstr ""
 "Wenn Sie Ihren Zug gewählt haben, betreten Sie die ^BInterstellare Börse^N. Hier\n"
 "können Sie Aktien kaufen oder  verkaufen, sich von der Handelsbank Geld lei-\n"
 "hen  oder einen Teil  ihrer Schulden  (so vorhanden)  zurückzahlen. Beachten\n"
-"Sie, daß jede  Firma eine beschränkte Zahl von Aktien  ausgibt -- Sie können\n"
+"Sie, daß jede  Firma eine  beschränkte Zahl von Aktien  ausgibt — Sie können\n"
 "nicht endlos kaufen! Sie können aber die  Firma  bitten, weitere Aktien aus-\n"
 "zugeben. Je größer ihr Anteil an  der Firma, desdo höher die Chance, das dem\n"
 "statt gegeben wird.\n"
