--- a/po/en_AU.po
+++ b/po/en_AU.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2017-05-20 09:41+1000\n"
-"PO-Revision-Date: 2017-05-20 09:49+1000\n"
+"PO-Revision-Date: 2017-05-20 09:59+1000\n"
 "Last-Translator: John Zaitseff <J.Zaitseff@zap.org.au>\n"
 "Language-Team: English (Australian)\n"
 "Language: en_AU\n"
@@ -1513,7 +1513,7 @@ msgstr ""
 "Once you select your move, you enter  the ^BInterstellar Stock Exchange^N.  Here\n"
 "you may  purchase shares,  sell them, borrow from  the Trading Bank or repay\n"
 "some of your debt (if applicable).  Note that each company  issues a limited\n"
-"number of shares -- you cannot go on buying for ever!  You may, however, bid\n"
+"number of shares — you cannot go on  buying for ever!  You may, however, bid\n"
 "for more shares to be issued.  You have a better chance of succeeding if you\n"
 "own a larger proportion of the company.\n"
 "\n"
