--- a/po/fi.po
+++ b/po/fi.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2017-05-20 09:41+1000\n"
-"PO-Revision-Date: 2017-05-20 09:57+1000\n"
+"PO-Revision-Date: 2017-05-20 10:06+1000\n"
 "Last-Translator: Jorma Karvonen <karvonen.jorma@gmail.com>\n"
 "Language-Team: Finnish <translation-team-fi@lists.sourceforge.net>\n"
 "Language: fi\n"
@@ -1523,9 +1523,9 @@ msgstr ""
 "Heti kun valitset siirtosi,  siirryt ^BTähtien väliseen osakepörssiin^N.  Täällä\n"
 "voit ostaa osakkeita, myydä  niitä, lainata Kauppapankilta tai maksaa joita-\n"
 "kin velkojasi (jos  sellaisia on).  Huomaa, että jokainen  yritys myy rajoi-\n"
-"tetun määrän  osakkeita -- et voi jatka  ostamista  loputtomiin!   Voit kui-\n"
-"tenkin pyytää  lisää osakkeita myytäväksi.  Sinulla  on paremmat onnistumis-\n"
-"mahdollisuudet, jos omistat laajemman osuuden yrityksestä.\n"
+"tetun määrän osakkeita — et voi jatka ostamista loputtomiin!  Voit kuitenkin\n"
+"pyytää lisää osakkeita myytäväksi.   Sinulla on paremmat onnistumismahdolli-\n"
+"suudet, jos omistat laajemman osuuden yrityksestä.\n"
 "\n"
 "Peli  tavallisesti loppuu  ^B~t^N kierroksen  jälkeen.  Voit  kuitenkin lopettaa\n"
 "pelin  aikaisemmin  painamalla ^K<CTRL><C>^N,  kun  sinua pyydetään  valitsemaan\n"
