--- a/po/sv.po
+++ b/po/sv.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2017-05-20 09:41+1000\n"
-"PO-Revision-Date: 2017-05-20 09:51+1000\n"
+"PO-Revision-Date: 2017-05-20 10:09+1000\n"
 "Last-Translator: Anders Jonsson <anders.jonsson@norsjovallen.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "Language: sv\n"
@@ -1522,7 +1522,7 @@ msgstr ""
 "När du valt ditt drag går du in i ^BInterstellära aktiemarknaden^N.   Här kan du\n"
 "köpa aktier, sälja dem,  låna från handelsbanken eller betala tillbaka delar\n"
 "av din skuld  (om du har någon).  Notera att varje  företag utfärdar ett be-\n"
-"gränsat antal aktier -- du kan inte köpa  för alltid!  Du kan dock be om ut-\n"
+"gränsat antal aktier — du kan inte köpa  för alltid!  Du kan dock  be om ut-\n"
 "färdande av mer aktier.  Du har större chans att lyckas om du äger en större\n"
 "del av företaget.\n"
 "\n"
