--- a/po/eo.po
+++ b/po/eo.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2017-05-20 09:41+1000\n"
-"PO-Revision-Date: 2017-05-20 09:50+1000\n"
+"PO-Revision-Date: 2017-05-20 10:04+1000\n"
 "Last-Translator: Felipe Castro <fefcas@gmail.com>\n"
 "Language-Team: Esperanto <translation-team-eo@lists.sourceforge.net>\n"
 "Language: eo\n"
@@ -1519,9 +1519,9 @@ msgstr ""
 "Tuj post  kiam vi  elektas  vian movon,  vi eniras la  ^BInterstelaran  akcian\n"
 "interŝanĝejon^N.  Tie vi  povas aĉeti akciojn,  vendi ilin,  pruntepreni el la\n"
 "Komerca Banko  aŭ repagi  iom el via ŝuldo  (se ekzistanta).  Rimarku ke ĉiu\n"
-"kompanio  disponigas limigitan  nombron da akcioj -- vi ne  povas aĉeti sen-\n"
-"fine!  Tamen, vi povas  peti ke pli da akcioj  estu vendataj.  Vi pli ŝancas\n"
-"sukcesi se vi posedas pli grandan proporcion de la kompanio.\n"
+"kompanio disponigas limigitan nombron da akcioj — vi ne povas aĉeti senfine!\n"
+"Tamen, vi povas  peti ke pli da akcioj estu vendataj.  Vi pli ŝancas sukcesi\n"
+"se vi posedas pli grandan proporcion de la kompanio.\n"
 "\n"
 "La ludo  ordinare finas  post ^B~t^N cikloj.  Tamen, vi povas fini  la ludon pli\n"
 "frue premante  ^K<CTRL><C>^N  kiam aldemandita elekti movon.  Krome,  individuaj\n"
