--- a/po/hr.po
+++ b/po/hr.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: trader 7.10\n"
 "Report-Msgid-Bugs-To: J.Zaitseff@zap.org.au\n"
 "POT-Creation-Date: 2017-05-20 09:41+1000\n"
-"PO-Revision-Date: 2017-05-20 09:50+1000\n"
+"PO-Revision-Date: 2017-05-20 10:07+1000\n"
 "Last-Translator: Tomislav Krznar <tomislav.krznar@gmail.com>\n"
 "Language-Team: Croatian <lokalizacija@linux.hr>\n"
 "Language: hr\n"
@@ -1523,9 +1523,9 @@ msgstr ""
 "Kada  odaberete svoj  potez, ulazite  u  ^BMeđuzvjezdanu burzu^N.   Ovdje možete\n"
 "kupovati  dionice,  prodavati ih, posuđivati  novce od  Trgovačke  banke ili\n"
 "otplatiti dio vašeg duga  (ako postoji).  Primijetite da svaka tvrtka izdaje\n"
-"ograničen  broj dionica  --  ne možete  kupovati  cijelo vrijeme!   Međutim,\n"
-"možete tražiti od  tvrtke izdavanje novih dionica.  Ako  imate veću količinu\n"
-"udjela u tvrtci, veće su vam šanse za uspjeh.\n"
+"ograničen broj dionica — ne možete kupovati cijelo vrijeme!  Međutim, možete\n"
+"tražiti od tvrtke izdavanje novih dionica.  Ako imate veću količinu udjela u\n"
+"tvrtci, veće su vam šanse za uspjeh.\n"
 "\n"
 "Igra uobičajeno  završava nakon ^B~t^N poteza.  Međutim,  možete završiti ranije\n"
 "pritiskom  ^K<CTRL><C>^N  umjesto odabira poteza.  Također pojedini  igrači mogu\n"
